# llm_rs

./: .clang-format  .gitignore  Cargo.toml  DESIGN.md  test_rmsnorm
backend/: Cargo.toml
backend/src/: backend.rs  cuda.rs  device.rs  dtype.rs  lib.rs  ops.rs
backend/src/device/: cuda.rs  mod.rs
backend/src/ops/: cuda.rs  mod.rs
kernel/: build.rs
kernel/src/: lib.rs
kernel/src/CUDA/: .clangd  kernels.cu  utils.cuh
kernel/src/CUDA/Gemm/: Config.h  Gemm.cuh  GemmLoader.cuh  Gemm_f32.cuh  MmaPtx.cuh
kernel/src/CUDA/Gemm/test/: test_accurancy.cu  test_gemm_f32.cu
kernel/src/CUDA/LayerNorm/: LayerNorm.cuh  RMSNorm.cuh
kernel/src/CUDA/activation/: GELU.cuh  SwiGLU.cuh
kernel/src/CUDA/attention/: Attention.cuh  Attention_decode.cuh  GQAttention_decode.cuh  GQAttention_prefill.cuh  Gather_kv.cuh
kernel/src/CUDA/embedding/: RoPE.cuh  add_pos_embedding.cuh
kernel/src/CUDA/loss/: CrossEntropy.cuh
kernel/src/CUDA/reduce/: Reduce.cuh
kernel/src/CUDA/residual/: Residual.cuh
kernel/src/CUDA/transpose/: Transpose.cuh
llm/: Cargo.toml
llm/src/: gpt2.rs  lib.rs  load_config.rs  qwen.rs
model/: Cargo.toml
model/src/: lib.rs
model/src/module/: attention.rs  embedding.rs  gelu.rs  gqattention.rs  layernorm.rs  linear.rs  lmhead.rs  mod.rs  qwenembedding.rs  residual.rs  rmsnorm.rs  rope.rs  swiglu_mlp.rs  transformer.rs
src/: main.rs
tensor/: Cargo.toml
tensor/src/: arena.rs  lib.rs  tensor.rs
tokenizer/: Cargo.toml
tokenizer/src/: bpe.rs  lib.rs  qwen2.rs
utils/: Cargo.toml
utils/src/: lib.rs  safetensors.rs
(+13 files in other folders)
